base/deployment-backapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backapp
  labels:
    homework: backapp
    training: block4
spec:
  replicas: 1
  selector:
    matchLabels:
      homework: backapp
      training: block4
  template:
    metadata:
      labels:
        homework: backapp
        training: block4
    spec:
      containers:
      - name: backapp
        image: quay.io/drsylent/cubix/block3/homework-backapp:springboot3
        ports:
        - name: http
          containerPort: 8080
