base/deployment-frontapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
  labels:
    homework: frontapp
    training: block4
spec:
  replicas: 1
  selector:
    matchLabels:
      homework: frontapp
      training: block4
  template:
    metadata:
      labels:
        homework: frontapp
        training: block4
    spec:
      containers:
      - name: frontapp
        image: quay.io/drsylent/cubix/block3/homework-frontapp:springboot3
        ports:
        - name: http
          containerPort: 8080
