base/service-backapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: backapp
  labels:
    homework: backapp
    training: block4
spec:
  selector:
    homework: backapp
    training: block4
  ports:
  - name: http
    port: 8080
    targetPort: http
  type: ClusterIP
