base/service-frontapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontapp
  labels:
    homework: frontapp
    training: block4
spec:
  selector:
    homework: frontapp
    training: block4
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  type: ClusterIP
